# openunit

./: .gitattributes  .gitignore  ARTIFACT_FORMAT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  SPEC.md  anchor.py  cli.py  make_vintages.py  openunit.py  pyproject.toml  sample_input.json  test_anchor.py  test_cli.py  test_determinism_guard.py  test_independent.py  test_ppp.py  test_properties.py  test_vintages.py  verify_independent.py
.github/workflows/: ci.yml
data/v0.1-2026-05-15/: SOURCES.md  artifact.json  artifact.json.ots  spec.json
data/v0.2-ppp-2026-05-15/: SOURCES.md  artifact.json  artifact.json.ots  spec.json
data/v0.2-ppp-illustrative-2026-05-15/: SOURCES.md  artifact.json  spec.json
docs/: ANCHORING.md  AUDIT.md
